--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -112,7 +112,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Import libraries\n"
+    "## Import libraries\n",
+    "# 2.1 Import libraries \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "\n",
+    "RANDOM_STATE = 42"
    ]
   },
   {
