--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -125,9 +125,7 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "\n",
-    "RANDOM_STATE = 42"
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n"
    ]
   },
   {
@@ -136,7 +134,24 @@
    "metadata": {},
    "source": [
     "# 1. Business Understanding\n",
-    "Goal: ?"
+    "## 1.1 Problem Statement\n",
+    "Airbnb hosts often find it difficult to choose price per nightfor their listings. Pricing too high can reduce bookings, while pricing too low can reduce revenue. Because pricing depends on multiple factors (e.g., room type, location, minimum nights, reviews, and availability), manual pricing is inconsistent and time-consuming.\n",
+    "\n",
+    "## 1.2 Objective\n",
+    "This project objective is to develop a **supervised regression** model to predict **listing price** (per night rate) from listing features such as ratings, reviews, location/country etc.\n",
+    "\n",
+    "Pricing is one of the most important decisions for Airbnb hosts:\n",
+    "- **Overpricing** can reduce bookings and occupancy rates.\n",
+    "- **Underpricing** can negatively impact Airbnb host's revenue.\n",
+    "\n",
+    "A price prediction model can help hosts estimate a reasonable nightly price using listing characteristics, supporting better pricing decisions and potentially improving occupancy and revenue.\n",
+    "\n",
+    "\n",
+    "## 1.3 Target Users & Business Value\n",
+    "**Target users:** Airbnb hosts, property managers, and new hosts listing for the first time.\n",
+    "\n",
+    "An accurate price prediction model can reduce guesswork in pricing decisions, improve pricing consistency across similar listings and also support better revenue optimisation while maintaining competitiveness among other listings. \n",
+    "\n"
    ]
   },
   {
