--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -177,7 +177,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Read *.csv file into pandas DataFrame\n"
+    "## Read *.csv file into pandas DataFrame\n",
+    "import pandas as pd \n",
+    "df = pd.read_csv(\"airbnb.csv\")\n",
+    "# Display the dataset\n",
+    "df"
    ]
   },
   {
@@ -191,11 +195,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "df85f32a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Basic shape and column overview of the dataset\n",
+    "# to understand the size, structure and contents of the dataset\n",
+    "print(\"Shape:\", df.shape) \n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2aeebdc",
+   "metadata": {},
+   "source": [
+    "This dataset contains a total of 12 805 listings with 23 columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2f52a2db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Understand the type of variable for each column\n"
+    "## Understand the type of variable for each column\n",
+    "display(df.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf358758",
+   "metadata": {},
+   "source": [
+    "After looking through each type of variable for each column, the dataset consists of both numerical and categorical variables. Where price, bathrooms, beds and guests are numerical but the rest of the columns like country, rating Dtype is 'object' which suggest that the need of encoding is needed. "
    ]
   },
   {
@@ -205,7 +239,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Check for missing data\n"
+    "## Check for missing data\n",
+    "## Check for missing data\n",
+    "df.isnull().sum()\n",
+    "\n",
+    "# Percentage of missing values \n",
+    "missing_percentage = df.isnull().mean() * 100\n",
+    "print(\"Percentage of missing values per column:\\n\", missing_percentage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "426b92be",
+   "metadata": {},
+   "source": [
+    "Most columns has no missing values which indicates strong data quality. However, there is a small portion of missing values is present in columns like host_name, checkin and checkout. With the low % of missing data, it can be handled using simple imputation strategies without impacting model performance that much."
    ]
   },
   {
@@ -215,7 +263,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Describe data distribution\n"
+    "## Describe data distribution\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00d9e8dd",
+   "metadata": {},
+   "source": [
+    "The summary statistics shows that the price distribution is highly skewed where there is a large gap between the median and maximum values. This suggest that there is extreme high priced listings which may disproportionately influecne model training. Numerical features such as number of beds and bathrooms shows wide ranges. With this data distribution, it tells me that I would need to do outlier handing and target transformation to improve model robustness. "
    ]
   },
   {
