Data visualisation and interpretation

--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -52,7 +52,10 @@
     "# Table of Contents\n",
     "\n",
     "1. Business Understanding\n",
-    "\n",
+    "   1.1 Problem Statement\n",
+    "   1.2 Objective\n",
+    "   1.3 Target Users & Business Value\n",
+    "   \n",
     "2. Data Understanding  \n",
     "   2.1 Load Dataset  \n",
     "   2.2 Summary Statistics and Data Quality Checks  \n",
@@ -75,7 +78,7 @@
     "4. Modelling  \n",
     "   4.1 Metric Selection and Justification  \n",
     "   4.2 Baseline Model: Linear Regression  \n",
-    "   4.3 Model Comparison choose 1\n",
+    "   4.3 Model Comparison  \n",
     "   4.4 Feature Engineering Impact (Before vs After)  \n",
     "   4.5 Hyperparameter Tuning  \n",
     "   4.6 Final Model Selection\n",
@@ -189,7 +192,7 @@
    "id": "a9b1d880",
    "metadata": {},
    "source": [
-    "## 2.2 Summary Statistics"
+    "## 2.2 Summary Statistics & Data Quality Check"
    ]
   },
   {
@@ -280,7 +283,7 @@
    "id": "76dcd583",
    "metadata": {},
    "source": [
-    "## 2.3 Data Visualization"
+    "## 2.3 Data Visualization and Interpretation"
    ]
   },
   {
@@ -296,7 +299,7 @@
    "id": "66369e79",
    "metadata": {},
    "source": [
-    "### 2.3.1.1 Understanding distribution of target"
+    "### 2.3.1.1 Target Distribution: Price"
    ]
   },
   {
@@ -306,7 +309,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Understanding distribution of target\n"
+    "## Understanding distribution of target\n",
+    "# 2.3.1 Target distribution: price\n",
+    "# Histogram to visualize price distribution to assess skewness and the presence of extreme values, which help to determine if transformations or robust evaluation metrics are needed.\n",
+    "plt.figure(figsize=(8,4))\n",
+    "sns.histplot(df[\"price\"], bins=40, kde=True)\n",
+    "plt.title(\"Distribution of Airbnb Prices\")\n",
+    "plt.xlabel(\"Price\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Boxplot to identify outliers in the target variable.\n",
+    "plt.figure(figsize=(8,2.8))\n",
+    "sns.boxplot(x=df[\"price\"])\n",
+    "plt.title(\"Price Boxplot (Outlier Check)\")\n",
+    "plt.xlabel(\"Price\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8ec2366",
+   "metadata": {},
+   "source": [
+    "### Interpretation of Price Distribution\n",
+    "\n",
+    "From the histogram, the price distribution is **heavily right-skewed** as the long tail extends to very large values. The majority of Airbnb listings are concentrated at **lower price ranges**, while a small number of listings have **extremely high prices**, extending up to very large values.\n",
+    "\n",
+    "This indicates that most Airbnb listings are affordable, but there exist a few luxury or premium listings that significantly increase the range of prices. These extreme values cause a long right tail in the distribution.\n",
+    "\n",
+    "The boxplot further confirms the presence of **numerous outliers**, with many price values lying far beyond the upper quartile. These outliers may represent high-priced listings that are not typical of the majority of the data like premium properties.\n",
+    "\n",
+    "### Implications for Modelling\n",
+    "\n",
+    "Due to the strong skewness and presence of outliers:\n",
+    "- The dataset does **not follow a normal distribution**, which may affect models that assume linear relationships.\n",
+    "- **Mean Absolute Error (MAE)** is selected as the primary evaluation metric, as it is more robust to extreme values compared to RMSE.\n",
+    "- Tree-based and ensemble models (e.g. Random Forest, Gradient Boosting) are expected to handle this skewed distribution better than simple linear models.\n"
    ]
   },
   {
@@ -314,7 +353,7 @@
    "id": "fcab4c87",
    "metadata": {},
    "source": [
-    "### 2.3.1.2 Understanding distribution of features"
+    "### 2.3.1.2 Numeric Feature Distribution"
    ]
   },
   {
@@ -324,7 +363,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Understanding distribution of features\n"
+    "## Understanding distribution of numerical features \n",
+    "num_cols = [\"rating\", \"reviews\", \"bathrooms\", \"beds\", \"guests\", \"toiles\", \"bedrooms\", \"studios\"]\n",
+    "num_cols = [c for c in num_cols if c in df.columns]\n",
+    "\n",
+    "df[num_cols].hist(figsize=(12,8), bins=30)\n",
+    "plt.suptitle(\"Numeric Feature Distributions\", y=1.02)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e1f96f9",
+   "metadata": {},
+   "source": [
+    "### Interpretation of Numeric Feature Distributions\n",
+    "\n",
+    "From the histograms above, most numerical features exhibit right-skewed distributions, where a large proportion of listings have low values and a relatively small number of listings have much higher values.\n",
+    "\n",
+    "- Bathrooms, beds, and bedrooms are heavily concentrated at lower values (typically 1–2), with long right tails representing larger properties. This suggests that most Airbnb listings are small to medium-sized, while large properties are comparatively rare.\n",
+    "\n",
+    "- Guests displays a discrete distribution with clear peaks at common occupancy levels (e.g., 2–6 guests), reflecting standard capacity offerings rather than a continuous range.\n",
+    "\n",
+    "- Toilets and studios appear almost binary in nature, with most listings taking a value of 0 and very few having a value of 1. This indicates limited variation and potential sparsity in these features.\n",
+    "\n",
+    "### Implications for Modelling\n",
+    "\n",
+    "- The strong skewness observed suggests that median-based imputation is more appropriate than mean imputation for missing numerical values, as it is less sensitive to extreme observations.\n",
+    "\n",
+    "- Features with limited variation (e.g., toilets, studios) may have lower predictive power individually but can still contribute useful signals when combined with other capacity-related features.\n",
+    "\n",
+    "- Tree-based and ensemble models are expected to handle these skewed and non-normal feature distributions more effectively than linear models.\n"
    ]
   },
   {
@@ -336,13 +405,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb7e492e",
+   "metadata": {},
+   "source": [
+    "### 2.3.2.1 Price Vs Numeric Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "82056dde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Understanding relationship between variables\n"
+    "## Understanding relationship between variables (Target Relationship)\n",
+    "plt.figure(figsize=(7,4))\n",
+    "sns.scatterplot(x=df[\"guests\"], y=df[\"price\"])\n",
+    "plt.title(\"Price vs Guests\")\n",
+    "plt.xlabel(\"Guests\")\n",
+    "plt.ylabel(\"Price\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c85e4c2c",
+   "metadata": {},
+   "source": [
+    "### Interpretation of Price vs Guests\n",
+    "\n",
+    "From the scatter plot, I observed that there is a positive relationship between the number of guests a listing can accommodate and its price. As the number of guests increases, the **typical price range also increases**, indicating that larger-capacity listings tend to charge higher prices.\n",
+    "\n",
+    "However, the relationship is **not strictly linear**. For each guest capacity, there is a **wide spread of prices**, suggesting that other factors such as location, property type, amenities, and quality also play a significant role in determining price.\n",
+    "\n",
+    "The plot also shows the presence of **extreme outliers**, where a small number of listings have exceptionally high prices compared to the majority. These outliers become more apparent at higher guest capacities.\n",
+    "\n",
+    "### Implications for Modelling\n",
+    "\n",
+    "- The positive trend suggests that **guests is a useful predictive feature** for price.\n",
+    "- The large variance and outliers indicate that simple linear models may struggle to fully capture the relationship.\n",
+    "- **Tree-based and ensemble models** are better suited to handle the non-linear patterns and extreme values observed in the data.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a8dcabe",
+   "metadata": {},
+   "source": [
+    "### 2.3.2.2 Price vs Categorical Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d34b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Categorical relationship: country vs price (top 10 by count)\n",
+    "# Compare price distributions across countries to assess the impact of location on pricing.\n",
+    "# Only the top 10 countries by listing count are included to ensure meaningful comparisons\n",
+    "# with sufficient sample sizes and to reduce noise from sparsely represented countries.\n",
+    "if \"country\" in df.columns:\n",
+    "    top_countries = df[\"country\"].value_counts().head(10).index\n",
+    "    tmp = df[df[\"country\"].isin(top_countries)]\n",
+    "\n",
+    "    # Boxplots are used to highlight differences in medians, spread, and outliers across categories.\n",
+    "    plt.figure(figsize=(10,4))\n",
+    "    sns.boxplot(data=tmp, x=\"country\", y=\"price\")\n",
+    "    plt.title(\"Price Distribution by Country (Top 10 countries)\")\n",
+    "    plt.xlabel(\"Country\")\n",
+    "    plt.ylabel(\"Price\")\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26a6c686",
+   "metadata": {},
+   "source": [
+    "### Interpretation of Price Distribution by Country\n",
+    "\n",
+    "The boxplot shows that price distributions vary significantly across different countries, indicating that location plays an important role in Airbnb pricing.\n",
+    "\n",
+    "Countries such as Italy, Greece, and France shows higher median prices and wider price ranges, suggesting stronger demand, higher costs of living, or a greater presence of premium listings. In contrast, countries such as India, Georgia, and Morocco tend to have lower median prices and narrower distributions, reflecting more affordable accommodation markets.\n",
+    "\n",
+    "Across all countries, there are numerous high-priced outliers, indicating that luxury listings exist regardless of location. However, the typical price level still differs substantially by country.\n",
+    "\n",
+    "### Implications for Modelling\n",
+    "\n",
+    "- The observed differences in price distributions suggest that country is an important categorical predictor of price.\n",
+    "- Encoding country as a categorical feature like using one-hot encoding in later part is expected to improve model performance.\n",
+    "- The presence of outliers across countries further supports the use of robust evaluation metrics such as MAE and tree-based models that are less sensitive to extreme values.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5726303",
+   "metadata": {},
+   "source": [
+    "### 2.3.2.3 Correlation Heatmap (Numeric Features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21268ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2.3.5 Correlation heatmap \n",
+    "plt.figure(figsize=(10,7))\n",
+    "corr = df.select_dtypes(include=[np.number]).corr()\n",
+    "sns.heatmap(corr, annot=False)\n",
+    "plt.title(\"Correlation Heatmap (Numeric Features)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4bf81c7",
+   "metadata": {},
+   "source": [
+    "### Interpretation of Correlation Heatmap\n",
+    "\n",
+    "The correlation heatmap shows the strength and direction of linear relationships between numeric variables.\n",
+    "\n",
+    "The target variable price exhibits a moderate positive linear correlation with capacity-related features such as bathrooms, beds, guests, and bedrooms, indicating that listings with larger capacity and more rooms generally tend to have higher prices.\n",
+    "\n",
+    "There are also strong correlations among the capacity-related features themselves, particularly between bedrooms, beds, and guests. This suggests the presence of multicollinearity, as these variables capture overlapping information about property size.\n",
+    "\n",
+    "In contrast, features such as toilets and studios show very weak or near-zero correlation with price and other variables, indicating limited individual predictive power.\n",
+    "\n",
+    "Identifier-related columns (e.g., id, host_id) show little meaningful correlation with price and do not contain semantic information relevant for prediction.\n",
+    "\n",
+    "### Implications for Modelling\n",
+    "\n",
+    "-Some features are highly correlated with each other, which can cause issues for linear models.\n",
+    "\n",
+    "-Tree-based and ensemble models are more suitable because they handle correlated and non-linear features better.\n",
+    "\n",
+    "-Capacity-related features (e.g. beds, bedrooms, guests) contain useful information and should be kept in the model.\n",
+    "\n",
+    "-Identifier-like features (such as IDs) do not provide useful predictive information and should be excluded from modelling."
    ]
   },
   {
