--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -3552,6 +3552,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93c38642",
+   "metadata": {},
+   "source": [
+    "The goal of this project was to bridge the gap between complex market data and actionable pricing for Airbnb hosts: \n",
+    "\n",
+    "This section will cover:\n",
+    "- Comparison of initial baseline to production ready model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "08b54910",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FINAL STARTUP PERFORMANCE REPORT\n",
+      "                       Model Version  MAE ($) Business Readiness\n",
+      "0       Baseline (Linear Regression)  8840.91         Unreliable\n",
+      "1  Best Baseline (Gradient Boosting)  7508.38          MVP Stage\n",
+      "2  Final Iterative (Log-Transformed)  6814.08       Market Ready\n",
+      "Total Error Reduction: $2,026.83\n",
+      "Overall Accuracy Gain: 22.93%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Performance Summary \n",
+    "summary_data = {\n",
+    "    \"Model Version\": [\"Baseline (Linear Regression)\", \"Best Baseline (Gradient Boosting)\", \"Final Iterative (Log-Transformed)\"],\n",
+    "    \"MAE ($)\": [8840.91, 7508.38, 6814.08],\n",
+    "    \"Business Readiness\": [\"Unreliable\", \"MVP Stage\", \"Market Ready\"]\n",
+    "}\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary_data)\n",
+    "\n",
+    "# Calculate total improvement from the first experiment to the final iteration\n",
+    "total_improvement = 8840.91 - 6814.08\n",
+    "pct_improvement = (total_improvement / 8840.91) * 100\n",
+    "\n",
+    "print(\"FINAL STARTUP PERFORMANCE REPORT\")\n",
+    "print(summary_df)\n",
+    "print(f\"Total Error Reduction: ${total_improvement:,.2f}\")\n",
+    "print(f\"Overall Accuracy Gain: {pct_improvement:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "707351e4",
+   "metadata": {},
+   "source": [
+    "This project applied supervised regression techniques to predict Airbnb listing prices using numerical and categorical features. Exploratory data analysis (EDA) showed that prices were highly skewed and moderately related to capacity-based features such as guests, bedrooms, and bathrooms.\n",
+    "\n",
+    "Among the initial models evaluated, the Random Forest and Gradient Boosting Regressors achieved significantly lower Mean Absolute Error than the baseline Linear Regression. However, by applying Log-Transformation in the iterative phase, we further reduced the MAE to $6,814.08. This represents a total 22.93% improvement in accuracy, making our price suggestions much more reliable for our hosts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24d070bd",
    "metadata": {},
    "source": [
@@ -3560,10 +3621,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c56649bd",
+   "metadata": {},
+   "source": [
+    "During this project, I realised that predicting Airbnb prices is much harder than the datasets I did in class. \n",
+    "The challenges I faced when doing Airbnb Price Prediction was:\n",
+    "\n",
+    "1. Extreme Price Outliers: Some listings in the dataset were priced at over $1,700,000, while most were around $14,000. These \"outliers\" acted like magnets, pulling the model's predictions away from the average. Even after I removed the top 1% of data, the model still struggled with \"heteroscedasticity\" which is a new term I learnt where it means the model’s mistakes got much bigger as the houses got more expensive.\n",
+    "\n",
+    "2. The \"Luxury Gap\": I discovered that my model is very good at pricing budget and mid-range homes, but it stumble on luxury properties. This is because budget homes are priced based on Utility (how many beds/baths they have), but luxury homes are priced based on Emotion and Prestige (designer furniture, rare views, or fame). Since my dataset didn't have a column for \"Luxury Style,\" the model could not understand why a 1-bedroom house could cost $20,000.\n",
+    "\n",
+    "3. Missing Context (Address): The biggest missing piece was exact location. My model only knew the \"Country.\" In the real world, an apartment right next to the Eiffel Tower is worth 5x more than the same apartment 20km away. Without GPS data, the model had a \"blind spot\" for neighborhood value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab9cbf72",
    "metadata": {},
    "source": [
     "## 8.3 Potential Areas for Improvement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec70bbae",
+   "metadata": {},
+   "source": [
+    "To imporve the 53% error margin, these are the potential areas for improvements:\n",
+    "1) Integrating Geographic data feature engineering:\n",
+    "   The model currently relie on \"country\" feature which is too broad for accurate pricing. In real world, location is the key feature of pricing, I would use Latitude and Longitude to caluclate the distance to tourist landmarks. This would allow the model explain why two properties with same attributes have vastly different market values pricings based on the location itself.\n",
+    "\n",
+    "2) Unsupervised Clustering \n",
+    "   The pricing logic for a budget hostel is very different from a luxury villa where training only one model on both creates outliers. Using K-means clustering to segment the data into distinct property personas such as \"Budget\", \"Business\", \"Luxury\". Then it could use a ensemble approach where a meta-model choose the best sub-model for specific cluster. \n",
+    "   "
    ]
   },
   {
