--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -3515,10 +3515,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "db8b3e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model successfully packaged and saved\n"
+     ]
+    }
+   ],
    "source": [
     "import joblib\n",
     "\n",
