--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -51,53 +51,58 @@
    "source": [
     "# Table of Contents\n",
     "\n",
-    "1. Business Understanding\n",
-    "   1.1 Problem Statement\n",
-    "   1.2 Objective\n",
-    "   1.3 Target Users & Business Value\n",
+    "---\n",
     "\n",
-    "2. Data Understanding  \n",
-    "   2.1 Load Dataset  \n",
-    "   2.2 Summary Statistics and Data Quality Checks  \n",
-    "   2.3 Data Visualisation and Interpretation  \n",
-    "       2.3.1 Understanding Distribution of Data  \n",
-    "           2.3.1.1 Target Distribution: Price  \n",
-    "           2.3.1.2 Numeric Feature Distributions  \n",
-    "       2.3.2 Understanding Relationships Between Variables  \n",
-    "           2.3.2.1 Price vs Numeric Features  \n",
-    "           2.3.2.2 Price vs Categorical Features  \n",
-    "       2.3.3 Correlation Heatmap (Numeric Features)\n",
+    "## [1. Business Understanding](#1.-Business-Understanding)\n",
+    "* **1.1 Problem Statement**\n",
+    "* **1.2 Objective**\n",
+    "* **1.3 Target Users & Business Value**\n",
     "\n",
-    "3. Data Preparation  \n",
-    "   3.1 Data Cleaning and Outlier Handling  \n",
-    "   3.2 Feature Engineering  \n",
-    "   3.3 Define Features (X) and Target (y)  \n",
-    "   3.4 Train–Test Split  \n",
-    "   3.5 Preprocessing Pipeline\n",
+    "## [2. Data Understanding](#2.-Data-Understanding)\n",
+    "* **2.1 Load Dataset**\n",
+    "* **2.2 Summary Statistics and Data Quality Checks**\n",
+    "* **2.3 Data Visualisation and Interpretation**\n",
+    "    * 2.3.1 Understanding Distribution of Data\n",
+    "        * 2.3.1.1 Target Distribution\n",
+    "        * 2.3.1.2 Numeric Feature Distributions\n",
+    "    * 2.3.2 Understanding Relationships Between Variables\n",
+    "        * 2.3.2.1 Price vs. Numeric Features (Scatter Plots)\n",
+    "        * 2.3.2.2 Price vs. Categorical Features (Box Plots)\n",
+    "    * 2.3.3 Correlation Heatmap\n",
     "\n",
-    "4. Modelling  \n",
-    "   4.1 Metric Selection and Justification  \n",
-    "   4.2 Baseline Model\n",
-    "   4.3 Model Comparison  \n",
-    "   4.4 Feature Engineering Impact (Before vs After)  \n",
-    "   4.5 Hyperparameter Tuning  \n",
-    "   4.6 Final Model Selection\n",
+    "## [3. Data Preparation](#3.-Data-Preparation)\n",
+    "* **3.1 Data Cleaning and Outlier Handling**\n",
+    "* **3.2 Feature Engineering**\n",
+    "* **3.3 Define Features (X) and Target (y)**\n",
+    "* **3.4 Train–Test Split**\n",
+    "* **3.5 Preprocessing Pipeline**\n",
     "\n",
-    "5. Final Evaluation  \n",
-    "   5.1 Test Set Performance  \n",
-    "   5.2 Residual Analysis  \n",
-    "   5.3 Feature Importance Analysis  \n",
-    "   5.4 Cross-Validation Performance  \n",
-    "   5.5 Business Interpretation of Model Error  \n",
-    "   5.6 Model Limitations\n",
+    "## [4. Modelling](#4.-Modelling)\n",
+    "* **4.1 Metric Selection and Justification (MAE, RMSE, R²)**\n",
+    "* **4.2 Baseline Model (Linear Regression)**\n",
+    "* **4.3 Model Comparison (Random Forest vs. Gradient Boosting)**\n",
+    "* **4.4 Feature Engineering Impact(Before vs After)**\n",
+    "* **4.5 Hyperparameter Tuning (RandomizedSearchCV)**\n",
+    "* **4.6 Baseline vs Tuned Gradient Boosting**\n",
+    "* **4.7 Final Model Selection**\n",
     "\n",
-    "6. Iterative Model Development\n",
+    "## [5. Final Evaluation](#5.-Final-Evaluation)\n",
+    "* **5.1 Test Set Performance**\n",
+    "* **5.2 Residual Analysis**\n",
+    "* **5.3 Feature Importance Analysis**\n",
+    "* **5.4 Cross-Validation Performance**\n",
+    "* **5.5 Business Interpretation of Model Error**\n",
+    "* **5.6 Model Limitations**\n",
     "\n",
-    "7. Deployment  \n",
-    "   7.1 Model Saving and Loading  \n",
-    "   7.2 Streamlit Application\n",
+    "## [6. Iterative Model Development](#6.-Iterative-Model-Development)\n",
     "\n",
-    "8. Conclusion\n"
+    "## [7. Deployment](#7.-Deployment)\n",
+    "* **7.1 Model Export (Joblib Serialization)**\n",
+    "* **7.2 Streamlit Application Implementation**\n",
+    "\n",
+    "## [8. Conclusion](#8.-Conclusion)\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -3666,18 +3671,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "788a6c61",
+   "id": "3bb8f4e0",
    "metadata": {},
    "source": [
-    "## Version Control and Development Process"
+    "## Appendix"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bcb3982a",
+   "id": "5fe89914",
    "metadata": {},
    "source": [
-    "# Appendix\n"
+    "Dataset= http://kaggle.com/datasets/ashishjangra27/airbnb-dataset\n",
+    "\n",
+    "GitHub= https://github.com/user2422224/OngTzeEnn_2404751F\n",
+    "\n",
+    "Streamlit= https://ongtzeenn2404751f-6jqx9zmh55av4jkrvyzyby.streamlit.app/\n",
+    "\n",
+    "Pipeline preprocessing = https://medium.com/@kocur4d/hyper-parameter-tuning-with-pipelines-5310aff069d6, https://medium.com/@soniafarajova/getting-familiar-with-pipelines-in-machine-learning-23505f4e46d2"
    ]
   }
  ],
