business deployment issues fixed

--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "c65758bd",
    "metadata": {},
    "outputs": [
@@ -3536,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "db8b3e49",
    "metadata": {},
    "outputs": [
@@ -3560,6 +3560,18 @@
     "joblib.dump(deployment_package, 'airbnb_pricing_model.pkl')\n",
     "\n",
     "print(\"Model successfully packaged and saved\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "170dbbce",
+   "metadata": {},
+   "source": [
+    "1. Deployment Issue Observed: During interactive testing, the model sometimes produced a “high floor” prediction for extreme low-input combinations (e.g., 1 guest with 0 beds/0 bedrooms). This happens because the model learns patterns from the training distribution and cannot reason about “invalid listing configurations” that rarely appear in the dataset.\n",
+    "\n",
+    "- Business Risk: Displaying unrealistic prices reduces user trust and harms product credibility during real-world usage and assessment demos.\n",
+    "\n",
+    "- Operational Mitigation Implemented: I implemented a lightweight business guardrail layer in the Streamlit deployment. This layer blocks impossible input combinations and applies conservative caps for clearly defined budget/small-listing profiles. This hybrid approach keeps the application user-friendly and prevents extreme outputs while preserving the model’s predictive value for valid listings."
    ]
   },
   {
