deployment issues explained

--- a/AirbnbML.ipynb
+++ b/AirbnbML.ipynb
@@ -3567,11 +3567,15 @@
    "id": "170dbbce",
    "metadata": {},
    "source": [
-    "1. Deployment Issue Observed: During interactive testing, the model sometimes produced a “high floor” prediction for extreme low-input combinations (e.g., 1 guest with 0 beds/0 bedrooms). This happens because the model learns patterns from the training distribution and cannot reason about “invalid listing configurations” that rarely appear in the dataset.\n",
+    "During deployment testing, I observed that the trained model could produce unrealistic price estimates when given input combinations that do not commonly exist in real Airbnb listings (e.g., 1 guest with 0 beds or 0 bathrooms). These scenarios represent out-of-distribution inputs that were not present in the training data and can cause misleading predictions despite correct model behavior.\n",
     "\n",
-    "- Business Risk: Displaying unrealistic prices reduces user trust and harms product credibility during real-world usage and assessment demos.\n",
+    "To address this, I implemented a business-aware input validation layer in the Streamlit application. This layer does not replace the machine learning model, but acts as an operational safeguard to ensure that predictions remain meaningful, interpretable, and aligned with real-world listing constraints.\n",
     "\n",
-    "- Operational Mitigation Implemented: I implemented a lightweight business guardrail layer in the Streamlit deployment. This layer blocks impossible input combinations and applies conservative caps for clearly defined budget/small-listing profiles. This hybrid approach keeps the application user-friendly and prevents extreme outputs while preserving the model’s predictive value for valid listings."
+    "Specifically, the deployment logic enforces hard constraints that reflect platform realities, such as requiring at least one guest, one bed, and one bathroom for any valid listing. For listings with zero bedrooms, the system automatically treats the input as a studio, ensuring consistency with how such properties are represented in the dataset. Conversely, when bedrooms are present, the studio flag is disabled to prevent contradictory inputs.\n",
+    "\n",
+    "In addition to hard constraints, the application applies soft validation warnings for uncommon but possible configurations, such as a high number of guests relative to available beds. These cases are not blocked, but the user is informed that predictions may be less reliable due to limited representation in the training data.\n",
+    "\n",
+    "All automatic adjustments are transparently communicated to the user through on-screen validation notes. This design choice preserves user intent while preventing the model from extrapolating beyond its learned domain. By combining machine learning predictions with explicit business logic guardrails, the deployed system behaves as a decision-support tool rather than an unbounded automated price setter, which is consistent with how pricing models are used in real-world platforms such as Airbnb."
    ]
   },
   {
